work started on frontend

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI="mongodb+srv://vivekkaushal:databasepassword@cluster0-zv3lg.gcp.mongodb.net/<dbname>?retryWrites=true&w=majority"
+ATLAS_URI=mongodb+srv://vivekkaushal:dbpassword@cluster0-zv3lg.gcp.mongodb.net/test?retryWrites=true&w=majority
